# envoy-cache-experiment

./: .gitignore  README.md
envoy/: envoy.yaml
send_to_and_get_from_host/: Cargo.toml  docker-compose.yaml
send_to_and_get_from_host/envoy/: envoy_service.yaml
send_to_and_get_from_host/src/: .cache.rs.swo  cache.rs  lib.rs
src/: lib.rs
workers_and_service/: Cargo.toml  docker-compose.yaml
workers_and_service/envoy/: Dockerfile.proxy
workers_and_service/src/: .cache.rs.swp  cache.rs  lib.rs
