[package]
name = "cache-experiment"
version = "0.1.0"
authors = ["Rahul Anand <rahulanand16nov@gmail.com>"]
edition = "2018"

[lib]
name = "service_module"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.1.3"
log = "0.4"
serde_json = "1.0.63"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
